# ironworks-cli

./: Cargo.toml  README.md
src/: cli.rs  err.rs  extractor.rs  icons.rs  init.rs  lib.rs  main.rs  sheets.rs
src/data/: icons.rs  init.rs  job_actions.rs  mod.rs  role_actions.rs  sheet_extractor.rs  sheets.rs
