[package]
name = "ironworks-cli"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
ironworks = { git = "https://github.com/ackwell/ironworks", features = ["excel", "sqpack", "tex"], rev = "7591e21" }
ironworks_schema = { git = "https://github.com/ackwell/ironworks", features = ["exdschema"], rev = "7591e21" }
phf = { version = "0.11", default-features = false, features = ["macros"] }
strum = "0.26"
strum_macros = "0.26"
image = "0.25.1"
texpresso = "2.0.1"
